# polysolve

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  PolySolveOptions.cmake.sample  README.md  compile.sh  linear-solver-spec.json  non-linear-solver-spec.json  nonlinear-auxsolver-spec.json  nonlinear-solver-spec.json  sample.json
.github/workflows/: continuous.yml  coverage.yml  optional-dependencies.yml
cmake/: FindMATIO.cmake  PolyfemSolversDependencies.cmake  PolyfemSolversDownloadExternal.cmake  PolyfemSolversUtils.cmake  Warnings.cmake  hypre.cmake  rbf.cmake
cmake/find/: FindPardiso.cmake  FindSuperLU.cmake
cmake/polysolve/: polysolve_copy_headers.cmake  polysolve_filter_flags.cmake  polysolve_optional_dependency.cmake  polysolve_prepend_current_path.cmake  polysolve_set_source_group.cmake  polysolve_target_link_system_libraries.cmake  polysolve_use_colors.cmake  polysolve_warnings.cmake
cmake/recipes/: CPM.cmake  LBFGSpp.cmake  accelerate.cmake  amgcl.cmake  blas.cmake  boost.cmake  catch2.cmake  cccl.cmake  cuda.cmake  cusolverdn.cmake  eigen.cmake  hypre.cmake  jse.cmake  json.cmake  kaminpar.cmake  lapack.cmake  metis.cmake  mkl.cmake  onetbb.cmake  pardiso.cmake  polyfem-data.cmake  sanitizers.cmake  spdlog.cmake  spectra.cmake  spqr.cmake  suitesparse.cmake  superlu.cmake  sympiler.cmake  trilinos.cmake  umfpack.cmake
cudatest/: CMakeLists.txt  cudatest.cpp  cudatest.cu
src/: CHOLMODSolver.cpp  CHOLMODSolver.hpp  CMakeLists.txt  FEMSolver.cpp  FEMSolver.hpp  LbfgsSolver.hpp  LinearSolver.cpp  LinearSolver.hpp  LinearSolverAMGCL.cpp  LinearSolverAMGCL.hpp  LinearSolverEigen.h  LinearSolverEigen.hpp  LinearSolverEigen.tpp  LinearSolverHypre.cpp  LinearSolverHypre.hpp  LinearSolverHypreGMRES.cpp  LinearSolverHypreGMRES.hpp  LinearSolverMKLFGMRES.cpp  LinearSolverMKLFGMRES.hpp  LinearSolverMumps.cpp  LinearSolverPardiso.cpp  LinearSolverPardiso.h  SaddlePointSolver.cpp  SaddlePointSolver.hpp
src/polysolve/: CHOLMODSolver.cpp  CHOLMODSolver.hpp  CMakeLists.txt  JSONUtils.hpp  LbfgsSolver.hpp  LinearSolver.cpp  LinearSolver.hpp  LinearSolverAMGCL.cpp  LinearSolverAMGCL.hpp  LinearSolverAMGCL_cuda.cu  LinearSolverAMGCL_cuda.hpp  LinearSolverCuSolverDN.cpp  LinearSolverCuSolverDN.cu  LinearSolverCuSolverDN.cuh  LinearSolverCuSolverDN.hpp  LinearSolverEigen.hpp  LinearSolverEigen.tpp  LinearSolverHypre.cpp  LinearSolverHypre.hpp  LinearSolverPETSC.cpp  LinearSolverPETSC.hpp  LinearSolverPardiso.cpp  LinearSolverSympiler.cpp  LinearSolverSympiler.hpp  SaddlePointSolver.cpp  Types.hpp  Utils.cpp  Utils.hpp  types.hpp
src/polysolve/linear/: AMGCL.cpp  AMGCL.hpp  AMGCL_cuda.cu  AMGCL_cuda.hpp  CMakeLists.txt  CuSolverDN.cu  CuSolverDN.cuh  EigenSolver.hpp  EigenSolver.tpp  FEMSolver.cpp  FEMSolver.hpp  HypreSolver.cpp  HypreSolver.hpp  LinearSolver.cpp  LinearSolver.hpp  LinearSolverAMGCL.cpp  LinearSolverAMGCL.hpp  LinearSolverCuSolverDN.cuh  LinearSolverEigen.hpp  LinearSolverEigen.tpp  LinearSolverHypre.cpp  LinearSolverHypre.hpp  LinearSolverPardiso.hpp  MASSolver.cu  MASSolver.hpp  PCGSolver.cu  PCGSolver.hpp  Pardiso.cpp  Pardiso.hpp  SPQR.cpp  SPQR.hpp  SaddlePointSolver.cpp  SaddlePointSolver.hpp  Solver.cpp  Solver.hpp  TrilinosSolver.cpp  TrilinosSolver.hpp  solver-spec.cpp  solver-spec.hpp
src/polysolve/linear/mas_utils/: BSRAdjacency.cpp  BSRAdjacency.cu  BSRAdjacency.hpp  BSRMatrix.cpp  BSRMatrix.cu  BSRMatrix.hpp  CuSparseWrapper.hpp  CudaUtils.cuh  GraphPartition.cpp  GraphPartition.hpp  InnerProduct.cu  InnerProduct.hpp  MASPreconditioner.cu  MASPreconditioner.hpp  MetisPartition.cpp  MetisPartition.hpp
src/polysolve/nonlinear/: BFGS.cpp  BFGS.hpp  BoxConstraintSolver.cpp  BoxConstraintSolver.hpp  BoxConstraints.hpp  CMakeLists.txt  Constraint.hpp  Criteria.cpp  Criteria.hpp  DenseNewton.cpp  DenseNewton.hpp  DenseNewton.tpp  GradientDescent.cpp  GradientDescent.hpp  LBFGS.cpp  LBFGS.hpp  LBFGS.tpp  LBFGSB.cpp  LBFGSB.hpp  Logger.hpp  MMA.cpp  MMA.hpp  MMA.tpp  MMAAux.hpp  Newton.cpp  Newton.hpp  PostStepData.cpp  PostStepData.hpp  PoststepData.cpp  PoststepData.hpp  Problem.cpp  Problem.hpp  Solver.cpp  Solver.hpp  Solver.tpp  SparseNewton.cpp  SparseNewton.hpp  SparseNewton.tpp  Utils.cpp  Utils.hpp  (+2 more)
src/polysolve/nonlinear/descent_strategies/: ADAM.cpp  ADAM.hpp  BFGS.cpp  BFGS.hpp  CMakeLists.txt  DescentStrategy.hpp  GradientDescent.cpp  GradientDescent.hpp  LBFGS.cpp  LBFGS.hpp  Newton.cpp  Newton.hpp  StochasticGradientDescent.cpp  StochasticGradientDescent.hpp
src/polysolve/nonlinear/descent_strategies/box_constraints/: BoxConstraintSolver.hpp  BoxedDescentStrategy.hpp  CMakeLists.txt  LBFGSB.cpp  LBFGSB.hpp  MMA.cpp  MMA.hpp  MMAAux.cpp
src/polysolve/nonlinear/line_search/: Armijo.cpp  Armijo.hpp  ArmijoLineSearch.hpp  Backtracking.cpp  Backtracking.hpp  BacktrackingLineSearch.hpp  CMakeLists.txt  CppOptArmijo.cpp  CppOptArmijo.hpp  CppOptArmijoLineSearch.hpp  LineSearch.cpp  LineSearch.hpp  LineSearch.tpp  MoreThuente.cpp  MoreThuente.hpp  MoreThuenteLineSearch.hpp  NoLineSearch.cpp  NoLineSearch.hpp  ResidualBacktracking.cpp  ResidualBacktracking.hpp  RobustArmijo.cpp  RobustArmijo.hpp
tests/: A_2.mat  CMakeLists.txt  main.cpp  test_json.cpp  test_linear_solver.cpp  test_nonlinear_solver.cpp  test_solver.cpp
tests/cmake/optional_dependencies/: CMakeLists.txt
